/*
 * Copyright 2024 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.google.android.ground.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "com/google/ground/audit_info.proto";
import "com/google/ground/geometry.proto";

// Data submitted by data collectors for relevant tasks in a job.
message Submission {
    // Required. The system-defined unique identifier of this entity.
    string id = 1;

    // Required. The ID of the location of interest to which this submission
    // refers.
    string loi_id = 2;

    // Required. The ID of the job to which this submission refers. This can
    // also be obtained from the location of interest, but is duplicated here
    // to facilitate filtering.
    string job_id = 3;

    // Required. Info about who created this submission and when.
    AuditInfo created = 4;

    // Info about who last modified this submission and when. If unset,
    // the submission was never modified after it was created.
    AuditInfo last_modified = 5;

    // The data collector's responses to tasks in this job.
    repeated TaskData task_data = 6;
}

// Data provided by data collectors for a specific task and LOI.
message TaskData {
    // Required. A system-defined ID.
    string id = 1;

    // Required. ID of the task to which this task data refers.
    string task_id = 2;

    // Indicates this task was skipped or left blank / unselected during data
    // collection.
    bool skipped = 3;

    // User-provided data must be one of the followng types:
    oneof task_data_type {
        // A manually entered text response.
        Text text = 4;
        // A manually entered number response.
        Number number = 5;
        // A manually selected date and/or time response.
        DateTime date_time = 6;
        // Response to a multiple-choice question.
        MultipleChoice multiple_choice_question = 7;
        // Result of data collector drawing a geometry (e.g., dropping a pin,
        // drawing or walking a perimeter).
        DrawGeometry draw_geometry = 8;
        // The result of capturing the device's current fused location.
        CaptureLocation capture_location = 9;
        // The result of a "take a photo" task.
        TakePhoto take_photo = 10;
    }

    // A manually entered text response.
    message Text {
        // The text provided by the user.
        string text = 1;
    }

    // A manually entered number response.
    message Number {
        // The number provided by the user.
        double number = 2;
    }

    // A manually selected date and/or time response.
    message DateTime {
        // The date and/or time provided by the user. Date is set to
        // UNIX epoch if unspecified (1970-01-01:00Z), time is set to
        // 0:00:00.00.
        google.protobuf.Timestamp date_time = 1;
    }

    message MultipleChoice {
        // The unique IDs of options selected by the user.
        repeated string selected_option_ids = 1;
        // The text provided in the "Other (please specify)" field, if present.
        string other_text = 2;
    }

    message DrawGeometry {
        // The geometry provided by the data collector.
        Geometry geometry = 1;
    }

    // The values returned by the data collector's device when completing a
    // "capture location" task.
    message CaptureLocation {
        // Required. The device's coordinates.
        Coordinates coordinates = 1;
        // The accuracy of `coordinates` returned by the device, in meters.
        double accuracy = 2;
        // The altitude captured by the device.
        double altitude = 3;
        // Required. The time reported by the device when the location was
        // captured.
        google.protobuf.Timestamp timestamp = 4;
    }

    // The result of a "take a photo" task.
    message TakePhoto {
        // Relative path of photo in remote storage.
        string photo_path = 1;
    }
}
